2016-03-25 huku <huku@grhack.net>

    * Tested latest version of Intel's XED, which now comes as a standalone
      library.
    * Updated "README.md".


2015-12-04 huku <huku@grhack.net>

    * Fixed typo in "decoder.h".
    * Replaced calls to `Py*_Check()' with `Py*_CheckExact()'.
    * Modified "Makefile" to use "python2.7-config".
    * Added link to precompiled binaries for Microsoft Windows and updated
      "README.md" accordingly.


2015-10-07 huku <huku@grhack.net>

    * Fixed memory leak in method `decode()' of class `Decoder'.
    * Switched type of member attributes in `Decoder' and `Instruction' from
      `T_OBJECT' to `T_ULONGLONG'; results in faster and more efficient code
      with less memory allocations.


2015-09-22 huku <huku@grhack.net>

    * Renamed `get_immediate_is_signed()' to `is_immediate_signed()'.
    * `XED_OPVIS_XXX' constants are now visible to Python.


2015-09-21 huku <huku@grhack.net>

    * Fixed bug (invalid return type) in `get_scale()'.


2015-08-17 huku <huku@grhack.net>

    * Renamed `InvalidOffsetException' to `InvalidOffsetError'.
    * One year of `pyxed' development; it's not WIP any more.


2015-06-26 huku <huku@grhack.net>

    * Fixed invalid typecast in "pyxed.c".
    * Implemented `get_operand_length()', `get_operand_length_bits()' and
      `get_memory_operand_length()' in class `Instruction'.
    * Updated "README.md".
    * Added "encoder.c" and "encoder.h".


2015-03-10 huku <huku@grhack.net>

    * Added "Makefile.nmake"; makefile for Microsoft's `nmake' utility.
    * Modified source to make it compile on Microsoft Windows (see "Makefile.nmake").
    * Tested on latest PIN (pin-2.14-71313).
    * Fixed compiler warning in "instruction.c".
    * Fixed comment typo in "decoder.c".
    * Implemented `get_scale()' in class `Instruction'.
    * `XED_OPERAND_XXX' constants are now visible to Python.


2014-12-23 huku <huku@grhack.net>

    * Class `XED' was renamed to `Decoder'.